<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView 
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:scaleType="centerCrop" android:src="@drawable/wall_portrait"/>

    <ImageView 
        android:id="@+id/logo"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true" android:layout_above="@+id/buttons_container"
        android:src="@drawable/logo"/>
<!--     <TextView  -->
<!--         android:layout_width="match_parent" android:layout_height="wrap_content" -->
<!--         android:background="@drawable/text_field_background" android:padding="5dp" android:text="Game Server" android:textSize="30sp" android:textColor="#7B6D55"/> -->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button 
            android:id="@+id/add_profile_button"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/add_profile_button_label"/>
        <Button 
            android:id="@+id/server_checker_button"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/server_checker_button_label"/>
        <Button 
            android:id="@+id/settings_button"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/settings_button_label"/>
        <Button 
            android:id="@+id/about_button"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/about_button_label"/>
    </LinearLayout>
</RelativeLayout>